[tool.poetry]
name = "test_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
pandas = "^1.3.3"
black = "^21.9b0"
uvicorn = "^0.15.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
